--- a/main.ipynb
+++ b/main.ipynb
@@ -737,6 +737,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Velma F Thomas Early Childhood Center', None),\n",
+       " ('Richard T Crane Technical Preparatory High School', '57.90'),\n",
+       " ('Barbara Vick Early Childhood & Family Center', '60.90'),\n",
+       " ('Dyett High School', '62.50'),\n",
+       " ('Wendell Phillips Academy High School', '63.00')]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now remove the '%' sign from the above result set for Average Student Attendance column\n",
+    "cur.execute('SELECT Name_of_School, REPLACE(Average_Student_Attendance, \"%\", \"\") \\\n",
+    "     from CHICAGO_PUBLIC_SCHOOLS_DATA \\\n",
+    "     order by Average_Student_Attendance \\\n",
+    "     LIMIT 5')\n",
+    "result = cur.fetchall()\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Richard T Crane Technical Preparatory High School', '57.90%'),\n",
+       " ('Barbara Vick Early Childhood & Family Center', '60.90%'),\n",
+       " ('Dyett High School', '62.50%'),\n",
+       " ('Wendell Phillips Academy High School', '63.00%'),\n",
+       " ('Orr Academy High School', '66.30%'),\n",
+       " ('Manley Career Academy High School', '66.80%'),\n",
+       " ('Chicago Vocational Career Academy High School', '68.80%'),\n",
+       " ('Roberto Clemente Community Academy High School', '69.60%')]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Which Schools have Average Student Attendance lower than 70%?\n",
+    "cur.execute('SELECT Name_of_School, Average_Student_Attendance  \\\n",
+    "     from CHICAGO_PUBLIC_SCHOOLS_DATA \\\n",
+    "     where CAST ( REPLACE(Average_Student_Attendance, \"%\", \"\") AS DOUBLE ) < 70 \\\n",
+    "     order by Average_Student_Attendance')\n",
+    "result = cur.fetchall()\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
