finish the project

--- a/main.ipynb
+++ b/main.ipynb
@@ -493,6 +493,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('School_ID',), ('NAME_OF_SCHOOL',), ('Elementary, Middle, or High School',), ('Street_Address',), ('City',), ('State',), ('ZIP_Code',), ('Phone_Number',), ('Link',), ('Network_Manager',), ('Collaborative_Name',), ('Adequate_Yearly_Progress_Made_',), ('Track_Schedule',), ('CPS_Performance_Policy_Status',), ('CPS_Performance_Policy_Level',), ('HEALTHY_SCHOOL_CERTIFIED',), ('Safety_Icon',), ('SAFETY_SCORE',), ('Family_Involvement_Icon',), ('Family_Involvement_Score',), ('Environment_Icon',), ('Environment_Score',), ('Instruction_Icon',), ('Instruction_Score',), ('Leaders_Icon',), ('Leaders_Score',), ('Teachers_Icon',), ('Teachers_Score',), ('Parent_Engagement_Icon',), ('Parent_Engagement_Score',), ('Parent_Environment_Icon',), ('Parent_Environment_Score',), ('AVERAGE_STUDENT_ATTENDANCE',), ('Rate_of_Misconducts__per_100_students_',), ('Average_Teacher_Attendance',), ('Individualized_Education_Program_Compliance_Rate',), ('Pk_2_Literacy__',), ('Pk_2_Math__',), ('Gr3_5_Grade_Level_Math__',), ('Gr3_5_Grade_Level_Read__',), ('Gr3_5_Keep_Pace_Read__',), ('Gr3_5_Keep_Pace_Math__',), ('Gr6_8_Grade_Level_Math__',), ('Gr6_8_Grade_Level_Read__',), ('Gr6_8_Keep_Pace_Math_',), ('Gr6_8_Keep_Pace_Read__',), ('Gr_8_Explore_Math__',), ('Gr_8_Explore_Read__',), ('ISAT_Exceeding_Math__',), ('ISAT_Exceeding_Reading__',), ('ISAT_Value_Add_Math',), ('ISAT_Value_Add_Read',), ('ISAT_Value_Add_Color_Math',), ('ISAT_Value_Add_Color_Read',), ('Students_Taking__Algebra__',), ('Students_Passing__Algebra__',), ('9th Grade EXPLORE (2009)',), ('9th Grade EXPLORE (2010)',), ('10th Grade PLAN (2009)',), ('10th Grade PLAN (2010)',), ('Net_Change_EXPLORE_and_PLAN',), ('11th Grade Average ACT (2011)',), ('Net_Change_PLAN_and_ACT',), ('College_Eligibility__',), ('Graduation_Rate__',), ('College_Enrollment_Rate__',), ('COLLEGE_ENROLLMENT',), ('General_Services_Route',), ('Freshman_on_Track_Rate__',), ('X_COORDINATE',), ('Y_COORDINATE',), ('Latitude',), ('Longitude',), ('COMMUNITY_AREA_NUMBER',), ('COMMUNITY_AREA_NAME',), ('Ward',), ('Police_District',), ('Location',)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cur.execute(\"SELECT name FROM PRAGMA_TABLE_INFO('CHICAGO_PUBLIC_SCHOOLS_DATA')\")\n",
+    "result = cur.fetchall()\n",
+    "column_list = []\n",
+    "for res in result:\n",
+    "    column_list.append(res)\n",
+    "print(column_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
@@ -800,10 +822,185 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('ALBANY PARK', 6864),\n",
+       " ('ARCHER HEIGHTS', 4823),\n",
+       " ('ARMOUR SQUARE', 1458),\n",
+       " ('ASHBURN', 6483),\n",
+       " ('AUBURN GRESHAM', 4175),\n",
+       " ('AUSTIN', 10933),\n",
+       " ('AVALON PARK', 1522),\n",
+       " ('AVONDALE', 3640),\n",
+       " ('BELMONT CRAGIN', 14386),\n",
+       " ('BEVERLY', 1636),\n",
+       " ('BRIDGEPORT', 3167),\n",
+       " ('BRIGHTON PARK', 9647),\n",
+       " ('BURNSIDE', 549),\n",
+       " ('CALUMET HEIGHTS', 1568),\n",
+       " ('CHATHAM', 5042),\n",
+       " ('CHICAGO LAWN', 7086),\n",
+       " ('CLEARING', 2085),\n",
+       " ('DOUGLAS', 4670),\n",
+       " ('DUNNING', 4568),\n",
+       " ('EAST GARFIELD PARK', 5337),\n",
+       " ('EAST SIDE', 5305),\n",
+       " ('EDGEWATER', 4600),\n",
+       " ('EDISON PARK', 910),\n",
+       " ('ENGLEWOOD', 6832),\n",
+       " ('FOREST GLEN', 1431),\n",
+       " ('FULLER PARK', 531),\n",
+       " ('GAGE PARK', 9915),\n",
+       " ('GARFIELD RIDGE', 4552),\n",
+       " ('GRAND BOULEVARD', 2809),\n",
+       " ('GREATER GRAND CROSSING', 4051),\n",
+       " ('HEGEWISCH', 963),\n",
+       " ('HERMOSA', 3975),\n",
+       " ('HUMBOLDT PARK', 8620),\n",
+       " ('HYDE PARK', 1930),\n",
+       " ('IRVING PARK', 7764),\n",
+       " ('JEFFERSON PARK', 1755),\n",
+       " ('KENWOOD', 4287),\n",
+       " ('LAKE VIEW', 7055),\n",
+       " ('LINCOLN PARK', 5615),\n",
+       " ('LINCOLN SQUARE', 4132),\n",
+       " ('LOGAN SQUARE', 7351),\n",
+       " ('LOOP', 871),\n",
+       " ('LOWER WEST SIDE', 7257),\n",
+       " ('MCKINLEY PARK', 1552),\n",
+       " ('MONTCLARE', 1317),\n",
+       " ('MORGAN PARK', 3271),\n",
+       " ('MOUNT GREENWOOD', 2091),\n",
+       " ('NEAR NORTH SIDE', 3362),\n",
+       " ('NEAR SOUTH SIDE', 1378),\n",
+       " ('NEAR WEST SIDE', 7975),\n",
+       " ('NEW CITY', 7922),\n",
+       " ('NORTH CENTER', 7541),\n",
+       " ('NORTH LAWNDALE', 5146),\n",
+       " ('NORTH PARK', 4210),\n",
+       " ('NORWOOD PARK', 6469),\n",
+       " ('OAKLAND', 140),\n",
+       " ('OHARE', 786),\n",
+       " ('PORTAGE PARK', 6954),\n",
+       " ('PULLMAN', 1620),\n",
+       " ('RIVERDALE', 1547),\n",
+       " ('ROGERS PARK', 4068),\n",
+       " ('ROSELAND', 7020),\n",
+       " ('SOUTH CHICAGO', 4043),\n",
+       " ('SOUTH DEERING', 1859),\n",
+       " ('SOUTH LAWNDALE', 14793),\n",
+       " ('SOUTH SHORE', 4543),\n",
+       " ('UPTOWN', 4388),\n",
+       " ('WASHINGTON HEIGHTS', 4006),\n",
+       " ('WASHINGTON PARK', 2648),\n",
+       " ('WEST ELSDON', 3700),\n",
+       " ('WEST ENGLEWOOD', 5946),\n",
+       " ('WEST GARFIELD PARK', 2622),\n",
+       " ('WEST LAWN', 4207),\n",
+       " ('WEST PULLMAN', 3240),\n",
+       " ('WEST RIDGE', 8197),\n",
+       " ('WEST TOWN', 9429),\n",
+       " ('WOODLAWN', 4206)]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the total College Enrollment for each Community Area\n",
+    "cur.execute('SELECT COMMUNITY_AREA_NAME, SUM(COLLEGE_ENROLLMENT) FROM CHICAGO_PUBLIC_SCHOOLS_DATA GROUP BY COMMUNITY_AREA_NAME')\n",
+    "result = cur.fetchall()\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('OAKLAND', 140),\n",
+       " ('FULLER PARK', 531),\n",
+       " ('BURNSIDE', 549),\n",
+       " ('OHARE', 786),\n",
+       " ('LOOP', 871)]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the 5 Community Areas with the least total College Enrollment sorted in ascending order\n",
+    "cur.execute('SELECT COMMUNITY_AREA_NAME, SUM(COLLEGE_ENROLLMENT) AS TOTAL_ENROLLMENT  FROM CHICAGO_PUBLIC_SCHOOLS_DATA \\\n",
+    "            GROUP BY COMMUNITY_AREA_NAME ORDER BY TOTAL_ENROLLMENT ASC LIMIT 5')\n",
+    "result = cur.fetchall()\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Edmond Burke Elementary School', 1.0),\n",
+       " (\"Luke O'Toole Elementary School\", 5.0),\n",
+       " ('George W Tilton Elementary School', 6.0),\n",
+       " ('Foster Park Elementary School', 11.0),\n",
+       " ('Emil G Hirsch Metropolitan High School', 13.0)]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List 5 schools with lowest safety score\n",
+    "cur.execute('SELECT NAME_OF_SCHOOL, SAFETY_SCORE FROM CHICAGO_PUBLIC_SCHOOLS_DATA WHERE SAFETY_SCORE!=\"None\" ORDER BY SAFETY_SCORE LIMIT 5')\n",
+    "result = cur.fetchall()\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Get the hardship index for the community area of the school which has College Enrollment of 4368\n",
+    "cur.execute('select hardship_index from CENSUS_DATA CD, CHICAGO_PUBLIC_SCHOOLS_DATA CPS \\\n",
+    "where CD.community_area_number = CPS.community_area_number \\\n",
+    "and college_enrollment = 4368')\n",
+    "result = cur.fetchall()\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the hardship index for the community area which has the highest value for College Enrollment\n",
+    "cur.execute('select community_area_number, community_area_name, hardship_index from CENSUS_DATA \\\n",
+    "   where community_area_number in \\\n",
+    "   ( select community_area_number from CHICAGO_PUBLIC_SCHOOLS_DATA order by college_enrollment desc limit 1 )')\n",
+    "result = cur.fetchall()\n",
+    "result"
+   ]
   }
  ],
  "metadata": {
